--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Ooty-Coonoor%20package">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1600628422019-6c39c98b2d63" alt="Kodaikanal">
+      <img src="c2.jpg" alt="Kodaikanal">
       <h3>Kodaikanal</h3>
       <p>2 Days / 1 Night<br>Nature, lakes & sightseeing.</p>
       <div class="price">Starting from ₹8,999</div>
@@ -269,3 +269,4 @@
 
 </body>
 </html>
+
