--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Chennai-Pondicherry%20package">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1600359751434-5a64a7a3d4b4" alt="Madurai Rameswaram">
+      <img src="chithambaram1.png" alt="Madurai Rameswaram">
       <h3>Madurai – Rameswaram – Kanyakumari</h3>
       <p>3 Days / 2 Nights<br>Temple tour & spiritual journey.</p>
       <div class="price">Starting from ₹12,999</div>
@@ -216,14 +216,14 @@
       <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Kodaikanal%20package">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1624555130581-1d9cca783bc0" alt="Yercaud">
+      <img src="coonoor.jpg" alt="Yercaud">
       <h3>Yercaud</h3>
       <p>2 Days / 1 Night<br>Peaceful hill station getaway.</p>
       <div class="price">Starting from ₹7,499</div>
       <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Yercaud%20package">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1604134967494-8b2f1fbe58a3" alt="Thanjavur">
+      <img src="fire.jpg" alt="Thanjavur">
       <h3>Thanjavur – Trichy – Chidambaram</h3>
       <p>2 Days / 1 Night<br>Heritage & temple architecture tour.</p>
       <div class="price">Starting from ₹9,999</div>
@@ -269,5 +269,6 @@
 
 </body>
 </html>
+
 
 
