--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -152,6 +151,7 @@
     <a href="#home">Home</a>
     <a href="#services">Services</a>
     <a href="#packages">Tour Packages</a>
+    <a href="#vehicles">Our Vehicles</a>
     <a href="#about">About Us</a>
     <a href="#contact">Contact</a>
   </nav>
@@ -184,53 +184,46 @@
   </div>
 </section>
 
-<section id="packages">
-  <h2>Tamil Nadu Tour Packages</h2>
+<section id="vehicles">
+  <h2>Our Vehicle Fleet</h2>
   <div class="services">
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1582510003544-4d00b7f74220" alt="Chennai Pondicherry">
-      <h3>Chennai – Mahabalipuram – Pondicherry</h3>
-      <p>2 Days / 1 Night<br>Beach, heritage & city sightseeing.</p>
-      <div class="price">Starting from ₹7,999</div>
-      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Chennai-Pondicherry%20package">Book on WhatsApp</a>
+      <img src="https://images.unsplash.com/photo-1619767886558-efdc259cde1a" alt="Swift Dzire">
+      <h3>Swift Dzire</h3>
+      <p>4 Seater • AC<br>Ideal for local & outstation trips.</p>
+      <div class="price">₹13 / km (Driver Bata Extra)</div>
+      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Swift%20Dzire">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="chithambaram1.png" alt="Madurai Rameswaram">
-      <h3>Madurai – Rameswaram – Kanyakumari</h3>
-      <p>3 Days / 2 Nights<br>Temple tour & spiritual journey.</p>
-      <div class="price">Starting from ₹12,999</div>
-      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Madurai-Rameswaram-Kanyakumari%20package">Book on WhatsApp</a>
+      <img src="https://images.unsplash.com/photo-1626072557464-9049fca1f72d" alt="Innova">
+      <h3>Toyota Innova</h3>
+      <p>7 Seater • AC<br>Comfortable family travel.</p>
+      <div class="price">₹17 / km (Driver Bata Extra)</div>
+      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Innova">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1593693397690-362cb9666fc2" alt="Ooty">
-      <h3>Ooty – Coonoor</h3>
-      <p>3 Days / 2 Nights<br>Hill station, tea gardens & toy train.</p>
-      <div class="price">Starting from ₹11,499</div>
-      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Ooty-Coonoor%20package">Book on WhatsApp</a>
+      <img src="https://images.unsplash.com/photo-1630159656415-84755f5b1b1b" alt="Innova Crysta">
+      <h3>Toyota Innova Crysta</h3>
+      <p>7 Seater • AC<br>Premium & luxury travel.</p>
+      <div class="price">₹19 / km (Driver Bata Extra)</div>
+      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Innova%20Crysta">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="C2.jpg" alt="Kodaikanal">
-      <h3>Kodaikanal</h3>
-      <p>2 Days / 1 Night<br>Nature, lakes & sightseeing.</p>
-      <div class="price">Starting from ₹8,999</div>
-      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Kodaikanal%20package">Book on WhatsApp</a>
+      <img src="https://images.unsplash.com/photo-1604134967494-8b2f1fbe58a3" alt="Tempo Traveller 12 Seater">
+      <h3>Tempo Traveller (12 Seater)</h3>
+      <p>AC / Non-AC<br>Group tours & family trips.</p>
+      <div class="price">₹22 / km (Driver Bata Extra)</div>
+      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%2012%20Seater%20Tempo%20Traveller">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="coonoor.jpg" alt="Yercaud">
-      <h3>Yercaud</h3>
-      <p>2 Days / 1 Night<br>Peaceful hill station getaway.</p>
-      <div class="price">Starting from ₹7,499</div>
-      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Yercaud%20package">Book on WhatsApp</a>
-    </div>
-    <div class="card">
-      <img src="fire.jpg" alt="Thanjavur">
-      <h3>Thanjavur – Trichy – Chidambaram</h3>
-      <p>2 Days / 1 Night<br>Heritage & temple architecture tour.</p>
-      <div class="price">Starting from ₹9,999</div>
-      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Thanjavur-Trichy-Chidambaram%20package">Book on WhatsApp</a>
+      <img src="https://images.unsplash.com/photo-1600359751434-5a64a7a3d4b4" alt="Tempo Traveller 14 Seater">
+      <h3>Tempo Traveller (14 Seater)</h3>
+      <p>AC / Non-AC<br>Corporate & group travel.</p>
+      <div class="price">₹24 / km (Driver Bata Extra)</div>
+      <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%2014%20Seater%20Tempo%20Traveller">Book on WhatsApp</a>
     </div>
   </div>
-  <p style="text-align:center;margin-top:20px;font-weight:bold;color:#1b5e20;">Custom packages available • Call or WhatsApp for best price</p>
+  <p style="text-align:center;margin-top:20px;font-weight:bold;color:#1b5e20;">Well maintained vehicles • Experienced drivers • 24/7 support</p>
 </section>
 
 <section id="about">
@@ -269,6 +262,3 @@
 
 </body>
 </html>
-
-
-
