Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -195,28 +195,28 @@
       <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Swift%20Dzire">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1626072557464-9049fca1f72d" alt="Innova">
+      <img src="innova.jpeg" alt="Innova">
       <h3>Toyota Innova</h3>
       <p>7 Seater • AC<br>Comfortable family travel.</p>
       <div class="price">₹17 / km (Driver Bata Extra)</div>
       <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Innova">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1630159656415-84755f5b1b1b" alt="Innova Crysta">
+      <img src="innova crysta.png" alt="Innova Crysta">
       <h3>Toyota Innova Crysta</h3>
       <p>7 Seater • AC<br>Premium & luxury travel.</p>
       <div class="price">₹19 / km (Driver Bata Extra)</div>
       <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Innova%20Crysta">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1604134967494-8b2f1fbe58a3" alt="Tempo Traveller 12 Seater">
+      <img src="temp traveller12.jpeg" alt="Tempo Traveller 12 Seater">
       <h3>Tempo Traveller (12 Seater)</h3>
       <p>AC / Non-AC<br>Group tours & family trips.</p>
       <div class="price">₹22 / km (Driver Bata Extra)</div>
       <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%2012%20Seater%20Tempo%20Traveller">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1600359751434-5a64a7a3d4b4" alt="Tempo Traveller 14 Seater">
+      <img src="tempo traveller14.jpeg" alt="Tempo Traveller 14 Seater">
       <h3>Tempo Traveller (14 Seater)</h3>
       <p>AC / Non-AC<br>Corporate & group travel.</p>
       <div class="price">₹24 / km (Driver Bata Extra)</div>
@@ -262,3 +262,4 @@
 
 </body>
 </html>
+
