Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <a class="book-btn" href="https://wa.me/919500471717?text=I%20want%20to%20book%20Innova%20Crysta">Book on WhatsApp</a>
     </div>
     <div class="card">
-      <img src="temp traveller12.jpeg" alt="Tempo Traveller 12 Seater">
+      <img src="tempo traveller12.jpeg" alt="Tempo Traveller 12 Seater">
       <h3>Tempo Traveller (12 Seater)</h3>
       <p>AC / Non-AC<br>Group tours & family trips.</p>
       <div class="price">₹22 / km (Driver Bata Extra)</div>
@@ -262,4 +262,5 @@
 
 </body>
 </html>
+
 
